Add Tutor Application Form with Basic Info, Address and Languages sections.

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -156,4 +156,13 @@
 	    <servlet-name>account-settings</servlet-name>
 	    <url-pattern>/AccountSettings</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>tutor-application</servlet-name>
+    	<jsp-file>/tutor-application.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>tutor-application</servlet-name>
+	    <url-pattern>/TutorApplication</url-pattern>
+	</servlet-mapping>
 </web-app>
