Add Account Settings for Tutor and Notifications page

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -165,4 +165,13 @@
 	    <servlet-name>tutor-application</servlet-name>
 	    <url-pattern>/TutorApplication</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>notifications</servlet-name>
+    	<jsp-file>/notifications.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>notifications</servlet-name>
+	    <url-pattern>/Notifications</url-pattern>
+	</servlet-mapping>
 </web-app>
