--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -140,6 +140,42 @@
 	</servlet-mapping>
 	
 	<servlet>
+   		<servlet-name>see-users</servlet-name>
+    	<jsp-file>/Admin/see-users.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>see-users</servlet-name>
+	    <url-pattern>/Admin/SeeUsers</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>see-tutors</servlet-name>
+    	<jsp-file>/Admin/see-tutors.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>see-tutors</servlet-name>
+	    <url-pattern>/Admin/SeeTutors</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>see-orders</servlet-name>
+    	<jsp-file>/Admin/see-orders.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>see-orders</servlet-name>
+	    <url-pattern>/Admin/SeeOrders</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+   		<servlet-name>see-lessons</servlet-name>
+    	<jsp-file>/Admin/see-lessons.jsp</jsp-file>
+	</servlet>	
+	<servlet-mapping>
+	    <servlet-name>see-lessons</servlet-name>
+	    <url-pattern>/Admin/SeeLessons</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
    		<servlet-name>dashboard</servlet-name>
     	<jsp-file>/dashboard.jsp</jsp-file>
 	</servlet>	
